crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__computed_capture_is_not_moved_into_a_delay.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 105
expression: "snapshot(&b, core)"
---
--- core before rule 3
let x#1 : int = error in
delay x#1
--- core after rule 3
let x#1 : int = error in
delay x#1
--- core after rules 1 + 2 + 3
let x#1 : int = error in
delay x#1
