crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__immediate_computed_return_is_removed.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 38
expression: "snapshot(&b,\nb.let_(x, b.builtin(F::AddInteger, &[b.int(40), b.int(2)], INT),\nb.var(x.name, INT)))"
---
--- core before rule 3
let result#1 : int = addInteger 40 2 in
result#1
--- core after rule 3
addInteger 40 2
--- core after rules 1 + 2 + 3
addInteger 40 2
