crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__nested_function_bindings_do_not_resurrect_removed_binders.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 79
expression: "snapshot(&b, b.let_(f, outer, b.app(b.var(f.name, f.ty), &[b.int(42)], INT)))"
---
--- core before rule 3
let f#4 : int -> int = \x#1 : int -> let g#3 : int -> int = \y#2 : int -> y#2 in
g#3 x#1 in
f#4 42
--- core after rule 3
(\x#1 : int -> (\y#2 : int -> y#2) x#1) 42
--- core after rules 1 + 2 + 3
42
