crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__single_delay.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 147
expression: "snapshot(&b, b.let_(d, delayed, b.force(b.var(d.name, d.ty), INT)))"
---
--- core before rule 3
let delayed#1 : @delay int = delay error in
force delayed#1
--- core after rule 3
force (delay error)
--- core after rules 1 + 2 + 3
force (delay error)
