crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__single_use_function_exposes_beta_reduction.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 57
expression: "snapshot(&b, b.let_(f, lam, b.app(b.var(f.name, f.ty), &[b.int(40)], INT)))"
---
--- core before rule 3
let f#2 : int -> int = \x#1 : int -> addInteger x#1 2 in
f#2 40
--- core after rule 3
(\x#1 : int -> addInteger x#1 2) 40
--- core after rules 1 + 2 + 3
addInteger 40 2
